# tarea3_TdI

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  start.sh  vector_index.faiss
my-frontend/: package-lock.json
my-frontend/src/components/: Chatbot.js  Photos.js
src/: App.css  App.js  create_index.py
src/components/: Chatbot.css  Chatbot.js  Photos.css  Photos.js
src/config/: settings.py
src/rag/: data_processing.py  embedding_manager.py  retrival.py  vector_db.py
src/routes/: Chatbot.py  hello.py  index.py
src/services/: create_query.py  query_index.py  send_query.py
src/util/: request_manager.py
